--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway?selection.family=Raleway" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
+
   <body>
     <header>
       <nav>
@@ -16,6 +19,7 @@
         <a href="#">Contact</a>
       </nav>
     </header>
+
     <section class="title-container">
       <div>
         <h1>50 Influential<br />Artists</h1>
